Step 2: Add account with Ledger signers

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       window.Buffer = Buffer;
     </script>
   </head>
-  <body class="text-gray-300 w-screen min-h-screen text-base">
-    <div id="root" class="w-full h-full"></div>
+  <body class="text-gray-300 w-screen min-h-[100vh] text-base">
+    <div id="root" class="min-h-[100vh]"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
